--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -27,8 +27,8 @@ spring:
 
 spring:
   config.activate.on-profile: testdb
-#  datasource:
-#    url: jdbc:h2:mem:board;mode=mariadb
-#    driverClassName: org.h2.Driver
-#  sql.init.mode: always
-#  test.database.replace: none
+  datasource:
+    url: jdbc:h2:mem:board;mode=mariadb
+    driverClassName: org.h2.Driver
+  sql.init.mode: always
+  test.database.replace: none
