#21-h2-console 옵션 삭제
따로 사용하지 않을 거기 때문에 주석처리

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -12,6 +12,9 @@ spring:
     url: jdbc:mariadb://localhost:3306/board
     username: lala9663
     password: lala9663
+#    url: jdbc:h2:mem:testdb
+#    username: sa
+#    driver-class-name: org.h2.Driver
   jpa:
     open-in-view: false
     defer-datasource-initialization: true
@@ -20,7 +23,7 @@ spring:
     properties:
       hibernate.format_sql: true
       hibernate.default_batch_fetch_size: 100
-  h2.console.enabled: true
+#  h2.console.enabled: true
   sql.init.mode: always
 
 ---
