#9-테스트코드 인식 안되는거 수정
pathvariable 오류

--- a/build.gradle
+++ b/build.gradle
@@ -65,3 +65,7 @@ tasks.withType(JavaCompile) {
 clean.doLast {
     file(querydslDir).deleteDir()
 }
+
+compileJava {
+    options.compilerArgs << '-parameters'
+}
